# phone-book-in-C

./: CMakeLists.txt  LICENSE  README.md  phone_book.c
includes/: contacts.h  exit_main_menu.h  func_to_add.h  input_utils.h  opening_files.h  structures.h  validity_func.h
modules/: contacts.c  exit_main_menu.c  func_to_add.c  input_utils.c  opening_files.c  validity_func.c
